[package]
name = "test-helpers"
version = "0.0.2"
authors = ['Grid Singularity <https://github.com/gridsingularity>']
edition = "2021"

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
gsy-primitives = { default-features = false, path = "../", version = "0.0.2" }
rand = {default-features = false, version = "0.8.5"}

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "sp-api/std",
    "sp-core/std",
]