[package]
name = 'offchain-utils'
version = '0.0.1'
description = 'Offchain utilities pallet (example)'
authors = ['Grid Singularity']
homepage = 'https://github.com/gridsingularity'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gridsingularity/gsy-decentralized-exchange'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-core/std',
]
try-runtime = []