[package]
name = 'orderbook-registry'
version = '0.0.2'
description = 'Orderbook-registry module for handling the GSy-Decentralized Exchange orderbook system'
authors = ['Grid Singularity <https://github.com/gridsingularity>']
homepage = 'https://gridsingularity.com/'
edition = '2024'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gridsingularity/gsy-node'

[lib]
name = "orderbook_registry"
path = "src/lib.rs"
crate-type = ["rlib"]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
gsy-collateral = { version = '0.0.2', default-features = false, path = '../gsy-collateral' }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.21.0", optional = true }

sp-runtime = { workspace = true }

gsy-primitives = { workspace = true }
log = { version = "0", default-features = false }
num-traits = { version = "0", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
