[package]
name = 'stripe-bridge'
version = '0.0.2'
description = 'Offchain Stripe bridge pallet for processing payments via Stripe'
authors = ['SUPSI-DACD-ISAAC <https://github.com/supsi-dacd-isaac/>']
homepage = 'https://www.supsi.ch/en/isaac'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gridsingularity/gsy-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-io = { workspace = true }
sp-std = { workspace = true }
log = { version = "0.4.21", default-features = false }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }

gsy-primitives = { workspace = true }
remuneration = { version = '0.0.2', default-features = false, path = '../remuneration' }
orderbook-registry = { version = '0.0.2', default-features = false, path = '../orderbook-registry' }
orderbook-worker = { version = '0.0.2', default-features = false, path = '../orderbook-worker' }
gsy-collateral = { version = '0.0.2', default-features = false, path = '../gsy-collateral' }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", optional = true }

[dev-dependencies]
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
parking_lot = "0.12"

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'serde_json/std',
    'remuneration/std',
    'orderbook-registry/std',
    'orderbook-worker/std',
    'gsy-collateral/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
