[package]
name = 'trades-settlement'
version = '0.0.2'
description = 'Trades-settlement module for handling the GSy-Decentralized Exchange trades settlement system'
authors = ['Grid Singularity <https://github.com/gridsingularity>']
homepage = 'https://gridsingularity.com/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gridsingularity/gsy-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
gsy-primitives = { workspace = true }
gsy-collateral = { version = '0.0.2', default-features = false, path = '../gsy-collateral' }
orderbook-registry = { version = '0.0.2', default-features = false, path = '../orderbook-registry' }
orderbook-worker = { version = '0.0.2', default-features = false, path = '../orderbook-worker' }
log = { version = "0.4.21", default-features = false }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-io = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", optional = true }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    "frame-benchmarking?/std",
	'orderbook-registry/std',
	'orderbook-worker/std',
	'pallet-balances/std',
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
